--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <i class="fas fa-robot"></i>
                 <span class="btn-text">AI Detection</span>
             </button>
-            <button class="btn btn-analytics" onclick="navigate('analytics')">
+            <button class="btn btn-analytics" onclick="navigate('./analyse.html')">
                 <i class="fas fa-chart-line"></i>
                 <span class="btn-text">Live Analytics</span>
             </button>
