--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 <i class="fas fa-project-diagram"></i>
                 <span class="btn-text">System Demo</span>
             </button>
-            <button class="btn btn-detection" onclick="navigate('detection')">
+            <button class="btn btn-detection" onclick="navigate('./video realtime detection/vediosim.html')">
                 <i class="fas fa-robot"></i>
                 <span class="btn-text">AI Detection</span>
             </button>
