--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             --dark-gray: #333333;
             --white: #ffffff;
             --team-color: #ff5722; /* Hustler 27 accent color */
+            --emergency-red: #e63946; /* Emergency red color */
             --transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
         }
 
@@ -201,10 +202,10 @@
 
         .button-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
             width: 100%;
-            max-width: 1100px;
+            max-width: 1200px;
         }
 
         .btn {
@@ -285,6 +286,10 @@
             background: linear-gradient(135deg, var(--dark-gray), #555555);
         }
 
+        .btn-emergency {
+            background: linear-gradient(135deg, var(--emergency-red), #d90429);
+        }
+
         footer {
             text-align: center;
             padding: 1.75rem;
@@ -325,7 +330,7 @@
             }
             
             .button-grid {
-                gap: 1.75rem;
+                gap: 1.5rem;
             }
 
             .solution-section {
@@ -392,6 +397,7 @@
         .btn:nth-child(2) { animation-delay: 0.2s; }
         .btn:nth-child(3) { animation-delay: 0.3s; }
         .btn:nth-child(4) { animation-delay: 0.4s; }
+        .btn:nth-child(5) { animation-delay: 0.5s; }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -452,6 +458,10 @@
             <button class="btn btn-challan" onclick="navigate('./payChallan.html')">
                 <i class="fas fa-traffic-light"></i>
                 <span class="btn-text">Pay Challan</span>
+            </button>
+            <button class="btn btn-emergency" onclick="navigate('./emergency.html')">
+                <i class="fas fa-ambulance"></i>
+                <span class="btn-text">Emergency</span>
             </button>
         </div>
     </main>
