--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TrafficFlowX | By Hustler 27</title>
+    <title>TrafficFlowX</title>
     <style>
         :root {
             --deep-blue: #002a54;
