--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         }
 
         footer {
-            text-align: center;
+            /* text-align: center; */
             padding: 1.75rem;
             background-color: rgba(0, 42, 84, 0.92);
             color: var(--white);
@@ -663,7 +663,7 @@
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="#"><i class="fas fa-chevron-right"></i> Home</a></li>
-                    <li><a href="#"><i class="fas fa-chevron-right"></i> About Us</a></li>
+                    <li><a href="https://drive.google.com/file/d/1vLvqEYVSm1_hBOa0QuGJ27RcVrO9Z8uz/view?usp=drive_link" target="_blank"><i class="fas fa-chevron-right"></i> About Us</a></li>
                     <li><a href="#"><i class="fas fa-chevron-right"></i> Services</a></li>
                     <li><a href="#"><i class="fas fa-chevron-right"></i> Case Studies</a></li>
                     <li><a href="#"><i class="fas fa-chevron-right"></i> Blog</a></li>
