--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         </section>
 
         <div class="button-grid">
-            <button class="btn btn-simulation" onclick="navigate('simulation')">
+            <button class="btn btn-simulation" onclick="navigate('https://drive.google.com/file/d/1xjhZUvaj5eL6QIk-r_NP9e0YBAHO6BsV/view?usp=drive_link')">
                 <i class="fas fa-project-diagram"></i>
                 <span class="btn-text">System Demo</span>
             </button>
@@ -459,7 +459,7 @@
                 <i class="fas fa-traffic-light"></i>
                 <span class="btn-text">Pay Challan</span>
             </button>
-            <button class="btn btn-emergency" onclick="navigate('./emergency.html')">
+            <button class="btn btn-emergency" onclick="navigate('https://drive.google.com/file/d/1KeHZQdzfnvZURto7VTpsfNeIqjpHOn0f/view?usp=drive_link')">
                 <i class="fas fa-ambulance"></i>
                 <span class="btn-text">Emergency</span>
             </button>
