--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                 <i class="fas fa-traffic-light"></i>
                 <span class="btn-text">Pay Challan</span>
             </button>
-            <button class="btn btn-emergency" onclick="navigate('https://drive.google.com/file/d/1KeHZQdzfnvZURto7VTpsfNeIqjpHOn0f/view?usp=drive_link')">
+            <button class="btn btn-emergency" onclick="navigate('./emergency.html')">
                 <i class="fas fa-ambulance"></i>
                 <span class="btn-text">Emergency</span>
             </button>
